--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tower-http = {version = "0.5.0", features = ["cors"]}
 tower = "0.4"
+chrono = {version = "0.4", features = ["serde"]}
